--- a/.vscode/login.html
+++ b/.vscode/login.html
@@ -14,7 +14,7 @@
 <br> <h1>Login</h1> <br> <br>
 
 <div class="cotainer-fluid">
-  <div class="cotainer">
+  <div class="container">
     <div class="row">
 
       <form> 
