--- a/.vscode/login.html
+++ b/.vscode/login.html
@@ -13,7 +13,7 @@
 <body>
 <br> <h1>Login</h1> <br> <br>
 
-<div class="cotainer-fluid">
+<div class="container-fluid">
   <div class="container">
     <div class="row">
 
