modified login page

--- a/Pages/login.html
+++ b/Pages/login.html
@@ -29,8 +29,8 @@
         </div> 
         
         <br>
-        <button type="submit" value="submit" class="btn btn-primary"> Sign In </button><br>
-      <!-- or <br> <a href="Signup.html">Create an Account</a> -->
+        <button type="submit" value="submit" class="btn btn-primary">Sign In</button><br>
+      or <br> <a href="signup.html">Create an Account</a>
       </form>
     </div>
   </div>
