--- a/Pages/login_fail.html
+++ b/Pages/login_fail.html
@@ -27,16 +27,16 @@
           <label for="password">Password:</label><br>
           <input type="password" name="password" id="pass" class="form-control" required>
         </div> 
-        <p style="color: red;">Incorrect Account Details</p>
+        
+        <p id="invalid" style="color: red;">Account details don't match...</p>
+
         <br>
-        <button type="button" class="btn btn-primary" onclick="login()"> Sign In </button><br>
-      <!-- or <br> <a href="Signup.html">Create an Account</a> -->
+        <button type="button" class="btn btn-primary" onclick="login()">Sign In</button><br>
+      or <br> <a href="signup.html">Create an Account</a>
       </form>
     </div>
   </div>
 </div>
-
-<div id="php_test"></div>
    
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
