--- a/Pages/signup.html
+++ b/Pages/signup.html
@@ -10,7 +10,7 @@
   <link href="../StyleSheets/signup.css" rel="stylesheet">
 </head> 
 
-<body>
+<body id="body">
 <br> <h1>Sign Up</h1> <br><br>
 
 <div class="container-fluid">
