--- a/Pages/login.html
+++ b/Pages/login.html
@@ -31,8 +31,8 @@
         <p id="invalid" style="color: red;"></p>
 
         <br>
-        <button type="button" class="btn btn-primary" onclick="login()">Sign In</button><br>
-      or <br> <a href="signup.html">Create an Account</a>
+        <button type="button" id="login" class="btn btn-primary">Sign In</button><br>
+      or <br> <a id="signup" href="">Create an Account</a>
       </form>
     </div>
   </div>
@@ -47,6 +47,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 <script src="../JavaScript/action.js"></script>
 </body>
 
