--- a/Pages/signup.html
+++ b/Pages/signup.html
@@ -45,7 +45,7 @@
         
         <br>
         <button type="submit" value="submit" class="btn btn-primary"> Sign Up </button><br>
-        or <br> <a href="login.html">Login</a>
+        or <br> <a href="../index.php">Login</a>
       </form>
     </div>
   </div>
