--- a/Pages/login.html
+++ b/Pages/login.html
@@ -48,7 +48,7 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-<script src="../JavaScript/action.js"></script>
+<script src="../JavaScript/login-actions.js"></script>
 </body>
 
 </html>
