--- a/Pages/signup.html
+++ b/Pages/signup.html
@@ -17,7 +17,7 @@
   <div class="container">
     <div class="row">
 
-      <form> 
+      <form id="sign-up-content"> 
         <div class="form-group">
           <label for="firstname">First Name:</label><br>
           <input type="text" name="firstname" placeholder="First Name" id="fname" class="form-control" required>
@@ -44,8 +44,8 @@
           </div> 
         
         <br>
-        <button type="submit" value="submit" class="btn btn-primary"> Sign Up </button><br>
-        or <br> <a href="../index.php">Login</a>
+        <button type="button" id="sign-up" class="btn btn-primary"> Sign Up </button><br>
+        or <br> <a id="login-redirect" href="">Login</a>
       </form>
     </div>
   </div>
@@ -62,6 +62,8 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+<script src="../JavaScript/sign-up-actions.js"></script>
 </body>
 
 </html>
