Implemented sign up error

--- a/Pages/signup.html
+++ b/Pages/signup.html
@@ -43,6 +43,8 @@
             <input type="password" name="password" placeholder="Password" id="pass" class="form-control" required>
           </div> 
         
+          <p id="invalid" style="color: red;"></p>
+
         <br>
         <button type="button" id="sign-up" class="btn btn-primary"> Sign Up </button><br>
         or <br> <a id="login-redirect" href="">Login</a>
