--- a/html/signup.html
+++ b/html/signup.html
@@ -7,7 +7,7 @@
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
         crossorigin="anonymous">
-  <link href="../StyleSheets/signup.css" rel="stylesheet">
+  <link href="../css/signup.css" rel="stylesheet">
 </head> 
 
 <body id="body">
@@ -65,7 +65,7 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-<script src="../JavaScript/sign-up-actions.js"></script>
+<script src="../js/sign-up-actions.js"></script>
 </body>
 
 </html>
