added link to add task page

--- a/html/todo.html
+++ b/html/todo.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link">Add New Task</a> <!-- add link -->
+                        <a class="nav-link" href="addtask.html">Add Tasks</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link">Ongoing Tasks</a> <!-- add link -->
@@ -58,7 +58,7 @@
     a {
         display: block;
         padding: 8px;
-        color: whitesmoke;  
+        color: black;  
     }
 
     body {
