Implemented delete task action and fixed sql statements in todoDB class

--- a/html/addtask.html
+++ b/html/addtask.html
@@ -100,7 +100,7 @@
                     <input id="due-date" type="date" name="dateTime" class="form-control" style="width: 100%;" required> <br> <br> 
 
                     <button id="add" type="submit" name="submit" class="btn">Add Task</button> 
-                    <button type="button" class="btn cancel">Cancel</button>
+                    <button id="cancel" type="button" class="btn cancel">Cancel</button>
 
                 </form>
             </div>
@@ -173,5 +173,6 @@ form {
         crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 <script src="../js/db-operations.js"></script>
+<script src="../js/login-actions.js"></script>
 </body>
 </html>
