--- a/html/addtask.html
+++ b/html/addtask.html
@@ -76,11 +76,14 @@
         <h4>Task:</h4>
         <input type="text" name="task" class="form-control" required> <br> <br>
 
+        <h4>Description:</h4>
+        <input type="text" name="task" class="form-control" required> <br> <br>
+
         <h4>Date & Time:<h4> 
         <input id="text" type="datetime-local" name="dateTime" class="form-control" required> <br> <br>
         
 
-        <button type="submit" name="submit" class="btn">Add Task</button> 
+        <button type="submit" name="submit" class="btn">Add</button> 
         <button type="button" class="btn cancel">Cancel</button>
     </form>
 </div>
