--- a/html/login.html
+++ b/html/login.html
@@ -17,7 +17,7 @@
   <div class="container">
     <div class="row">
 
-      <form> 
+      <form name = "form" action = "getDBinfo.php" method = "POST"> 
         <div class="form-group">
           <label for="username">Username:</label><br>
           <input type="text" name="username" id="username" class="form-control" required>
