added log out button

--- a/html/addtask.html
+++ b/html/addtask.html
@@ -18,7 +18,7 @@
                     justify-content-start
                     
                     col-12">
-            <a class="navbar-brand" style="cursor: pointer;" id="log-out">To-Do</a>
+            <a class="navbar-brand">To-Do</a>
             <button class="navbar-toggler" type="button"
                     data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -33,6 +33,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link">Completed Tasks</a> <!-- add link -->
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" style="cursor: pointer;" id="log-out">Log Out</a> <!-- add link -->
                     </li>
                 </ul>
             </div>
