added logout link

--- a/html/addtask.html
+++ b/html/addtask.html
@@ -35,7 +35,7 @@
                         <a class="nav-link">Completed Tasks</a> <!-- add link -->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" style="cursor: pointer;" id="log-out">Log Out</a> <!-- add link -->
+                        <a class="nav-link" style="cursor: pointer;" id="log-out">Log Out</a>
                     </li>
                 </ul>
             </div>
@@ -76,7 +76,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col"/>
+        <div class="col">
         <div class="col">
             <div class="input-group">
                 <form action="" class="form-container" method="POST">
