--- a/html/addtask.html
+++ b/html/addtask.html
@@ -72,7 +72,7 @@
 
     <body>
 
-        <div class="container">
+        <div class="container mt-3">
             <div class="row">
                 <div class="col">
                     <div class="col">
